# bluerov2heavy

./: .gitignore
bluerov2heavy_control/: CMakeLists.txt  package.xml
bluerov2heavy_control/cfg/: marker_reconfig.cfg  pid_reconfig.cfg
bluerov2heavy_control/launch/: bluerov_node.launch  joystick_teleop.launch  keyboard_teleop.launch  los_controller.launch  position_hold.launch  rov_pid_controller.launch  set_gm_current.launch  start_ardusub_sitl.launch  start_thruster_manager.launch  switch_pro_teleop.launch  video.launch
bluerov2heavy_control/rviz/: bluerov2heavy_control.rviz
bluerov2heavy_control/scripts/: a_rovmanager.py  mavlink_bridge.py  mavros_interface.py  trajectory_visualizer.py
bluerov2heavy_control/srv/: SetControlMode.srv
bluerov2heavy_description/: CMakeLists.txt  package.xml
bluerov2heavy_description/launch/: bridge.launch  mangalia.launch  underwater_room.launch  upload.launch  upload_bluerov2heavy.launch
bluerov2heavy_description/models/: model.config  model.sdf
bluerov2heavy_description/robots/: altimeter.xacro  altimeter_sss.xacro  default.xacro
bluerov2heavy_description/urdf/: _d435.urdf.xacro  actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
bluerov2heavy_description/worlds/: underwater_room.world
bluerov2heavy_dobmpc/: CMakeLists.txt  package.xml
bluerov2heavy_dobmpc/config/: gazebo_param.yaml
bluerov2heavy_dobmpc/include/bluerov2_dobmpc/: bluerov2heavy_dob.h
bluerov2heavy_dobmpc/launch/: ampc.launch  dob.launch  pcl.launch  random.launch  start_ampc_demo.launch  start_bridge_demo.launch  start_dobmpc_demo.launch  start_random_demo.launch
bluerov2heavy_dobmpc/scripts/: acados_ocp.json  bluerov2heavy_dob_model.py  generate_c_code.py  generate_c_code_ampc.py  generate_c_code_dob.py  record_random_heavy.sh  setup_acados_tera.py
bluerov2heavy_dobmpc/scripts/c_generated_code/: Makefile  acados_sim_solver_bluerov2.c  acados_solver_bluerov2.c  acados_solver_bluerov2.h
bluerov2heavy_dobmpc/scripts/c_generated_code/bluerov2_model/: bluerov2_expl_ode_fun.c  bluerov2_expl_vde_adj.c  bluerov2_expl_vde_forw.c
bluerov2heavy_dobmpc/src/: bluerov2heavy_ampc.cpp  bluerov2heavy_ampc_node.cpp  bluerov2heavy_dob.cpp  bluerov2heavy_dob_node.cpp  bluerov2heavy_random_node.cpp
bluerov2heavy_gazebo/: CMakeLists.txt  package.xml
bluerov2heavy_gazebo/launch/: quick_start.launch  start_mpc_demo.launch  start_with_thruster_manager.launch
bluerov2heavy_gazebo/rviz/: bluerov2heavy_gazebo.rviz
bluerov2heavy_mpc/: CMakeLists.txt  package.xml
bluerov2heavy_mpc/launch/: circle.launch  circle_attitude.launch  helical.launch  lemniscate.launch  lissajous.launch  points.launch  rov_mpc_controller.launch  stationary.launch  yaw.launch
bluerov2heavy_mpc/scripts/: acados_ocp.json  bluerov2heavy.py  compare_model_mismatch.py  generate_c_code.py  plot.py  plot2d.py  plot_from_csv.py  rov_mpc_controller.py
bluerov2heavy_mpc/scripts/c_generated_code/: Makefile  acados_sim_solver_bluerov2heavy.c  acados_sim_solver_bluerov2heavy.h  acados_solver.pxd  acados_solver_bluerov2.c  acados_solver_bluerov2heavy.c  acados_solver_bluerov2heavy.h  main_bluerov2heavy.c  main_sim_bluerov2heavy.c
bluerov2heavy_mpc/scripts/c_generated_code/bluerov2_cost/: bluerov2_cost_y_0_fun.c  bluerov2_cost_y_0_fun_jac_ut_xt.c  bluerov2_cost_y_0_hess.c  bluerov2_cost_y_e_fun.c  bluerov2_cost_y_e_fun_jac_ut_xt.c  bluerov2_cost_y_e_hess.c  bluerov2_cost_y_fun.c  bluerov2_cost_y_fun_jac_ut_xt.c  bluerov2_cost_y_hess.c
bluerov2heavy_mpc/scripts/c_generated_code/bluerov2_model/: bluerov2_expl_ode_fun.c  bluerov2_expl_vde_adj.c  bluerov2_expl_vde_forw.c
bluerov2heavy_mpc/scripts/c_generated_code/bluerov2heavy_cost/: bluerov2heavy_cost.h  bluerov2heavy_cost_y_0_fun.c  bluerov2heavy_cost_y_0_fun_jac_ut_xt.c  bluerov2heavy_cost_y_0_hess.c  bluerov2heavy_cost_y_e_fun.c  bluerov2heavy_cost_y_e_fun_jac_ut_xt.c  bluerov2heavy_cost_y_e_hess.c  bluerov2heavy_cost_y_fun.c  bluerov2heavy_cost_y_fun_jac_ut_xt.c  bluerov2heavy_cost_y_hess.c
bluerov2heavy_mpc/scripts/c_generated_code/bluerov2heavy_model/: bluerov2heavy_expl_ode_fun.c  bluerov2heavy_expl_vde_adj.c  bluerov2heavy_expl_vde_forw.c  bluerov2heavy_impl_dae_fun.c  bluerov2heavy_impl_dae_fun_jac_x_xdot_u.c  bluerov2heavy_impl_dae_fun_jac_x_xdot_u_z.c  bluerov2heavy_impl_dae_fun_jac_x_xdot_z.c  bluerov2heavy_impl_dae_jac_x_xdot_u_z.c  bluerov2heavy_model.h
bluerov2heavy_mpc/src/: bluerov2heavy_mpc_node.cpp
bluerov2heavy_mpc/traj/: CircleAttitudeExcitation  HelixPitch  Lissajous  circle.py  circle.txt  circle_attitude.txt  helix_pitch.txt  lissajous.txt  lissajous3D.txt  points.py  points.txt  pos_test.py  pos_test.txt  rotate_forward.py  rotate_forward.txt  test.txt  testpath.py
bluerov2heavy_states/: CMakeLists.txt  package.xml
bluerov2heavy_states/include/: ImuDo.h  essential.h
bluerov2heavy_states/launch/: state.launch
bluerov2heavy_states/plugins/: nodelets.xml
bluerov2heavy_states/src/: ImuDo.cpp
mycontrol/: CMakeLists.txt  package.xml
mycontrol/launch/: simple_mpc.launch
mycontrol/scripts/: geodetic_to_local.py  import_iver_mis.py  rc_override_example.py  simple_los.py
mycontrol/src/: a_rovmanager.py  bluerov2heavy.py  get_states.py  output_pub.py  rov_mpc_controller.py  run_mpc.py
