<?xml version="1.0"?>
<package format="2">
  <name>bluerov2heavy_dobmpc</name>
  <version>0.0.0</version>
  <description>
    DOBMPC and Adaptive MPC for the BlueROV2 Heavy (8-thruster, 6-DOF).
    Includes the Extended Active Observer (EAOB) and RLS-VFF online
    system identification. Adapted from bluerov2_dobmpc for the heavy
    configuration using Ng (2024) hydrodynamic parameters.
  </description>

  <maintainer email="fyp@todo.todo">fyp</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>uuv_gazebo_plugins_msgs</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>uuv_gazebo_plugins_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_gazebo_plugins_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
  </export>
</package>